# unmute

./: .gitignore  Dockerfile  README.autoconnect.md  README.md  SWARM.md  VERIFICATION_AND_OPTIMIZATION.md  bake_deploy_prod.sh  bake_deploy_staging.sh  check_gpu_memory.py  devices.example.json  docker-compose-ollama.yml  docker-compose.autoconnect.yml  docker-compose.autoconnect.yml.example  docker-compose.yml  expose_localhost.md  fix_cuda_issues.sh  fixed_raspberry_pi_server.py  monitor_audio_flow.py  pyproject.toml  remote_device_server.py  start_autoconnect.sh  swarm-deploy.yml  test_autoconnect.py  voices.yaml
.github/workflows/: ci.yml  docker-build.yml
.kiro/steering/: auto-connection-setup.md  custom-client-guide.md  product.md  structure.md  tech.md  websocket-audio-communication.md
dockerless/: start_backend.sh  start_frontend.sh  start_stt.sh
frontend/: package.json
frontend/src/app/: ConversationLog.tsx  CouldNotConnect.tsx  Unmute.tsx  UnmuteConfigurator.tsx  UnmuteHeader.tsx  chatHistory.ts  (+1 more)
k8s/: README.md  auto-deploy-cronjob.yaml  backend.yaml  deploy.sh  frontend.yaml  namespace-and-storage.yaml  secrets.yaml  stt.yaml  tts.yaml  update-images.sh
services/moshi-server/: entrypoint.sh  private.Dockerfile  public.Dockerfile  pyproject.toml  start_moshi_server_private.sh  start_moshi_server_public.sh
services/moshi-server/configs/: stt-prod.toml  tts-prod.toml  tts.toml  voice-cloning.toml
services/moshi-server/python-env/: pyproject.toml
services/moshi-server/python-env-blackwell/: pyproject.toml
tests/: test_tag_parser.py
traefik/dynamic/: unmute.yml
unmute/: device_manager.py  main_auto_connect.py  main_websocket.py  openai_realtime_api_events.py  recorder.py  remote_devices.py  unmute_handler.py  unmute_ros_bridge_client.py
unmute/llm/: chatbot.py  llm_utils.py  system_prompt.py  unmute_tag_parser.py
unmute/scripts/: vllm_wrapper_example.py
unmute/tts/: text_to_speech.py  voice_donation.py
(+1 files in other folders)
