[project]
name = "tts-python"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
   "moshi==0.2.10",
   "setuptools",
   "xformers",
   "pydantic",
   "julius",
   # keep the constraints loose so the lockfile can float
   "torch>=2.7.0",
   "torchvision>=0.22.0",
   "torchaudio>=2.7.0",
]

[tool.uv.sources]
# Linux & Windows get the CUDA build; macOS silently falls back to PyPI CPU wheels
torch =       [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchaudio =  [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]

[[tool.uv.index]]
name     = "pytorch-cu128"
url      = "https://download.pytorch.org/whl/cu128"
explicit = true